--- a/Portfolio.css
+++ b/Portfolio.css
@@ -76,6 +76,7 @@ section .title::after{
 .navbar{
     position: fixed;
     width: 100%;
+    background-color: #222222;
     z-index: 999;
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
@@ -84,6 +85,9 @@ section .title::after{
 .navbar.sticky{
     padding: 15px 0;
     background: #00203FFF;
+}
+.logo{
+    color:#ffffff;
 }
 .navbar .max-width{
     display: flex;
@@ -103,7 +107,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: #00203FFF;
+    color: rgb(154, 199, 245);
 }
 .navbar.sticky .menu li a:hover{
     color: #00203FFF;
